--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,14 @@ packages = [{ include = "src" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-cowsay = "^6.1"
 invoke = "^2.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.3.6"
 coverage = "^7.8.0"
+pytest = "^8.3.5"
+pytest-dotenv = "^0.5.2"
 
 [build-system]
 requires = ["poetry-core"]
